k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ytdown
  namespace: ytdown
  labels:
    app: ytdown
spec:
  type: ClusterIP
  selector:
    app: ytdown
  ports:
    - name: http
      port: 80
      targetPort: http
